# jellyfin-find-duplicate-films

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: film.rs  jellyfin.rs  main.rs
src/jellyfin/: api.rs
